crates/ide/src/handlers/snapshots/ide__handlers__completion__tests__value-8.snap
---
source: crates/ide/src/handlers/completion.rs
expression: "check(r#\"\n        class Foo { int field1; }\n        foreach i = 0...3 in {\n          def foo#i : Foo { int field2 = f$ }\n        }\n        \"#,)"
---
[
    CompletionItem {
        label: "Foo",
        insert_text_snippet: Some(
            "Foo<>$0",
        ),
        detail: "class",
        documentation: None,
        kind: Class,
        sort_text: None,
        trigger_signature_help: false,
        item_type: Some(
            Record {
                data: DefinedRecord(
                    Class(
                        Id {
                            idx: 0,
                        },
                    ),
                ),
                name: "Foo",
                _priv: (),
            },
        ),
    },
    CompletionItem {
        label: "false",
        insert_text_snippet: None,
        detail: "",
        documentation: None,
        kind: Keyword,
        sort_text: None,
        trigger_signature_help: false,
        item_type: Some(
            Bit {
                _priv: (),
            },
        ),
    },
    CompletionItem {
        label: "field1",
        insert_text_snippet: None,
        detail: "int",
        documentation: None,
        kind: Field,
        sort_text: None,
        trigger_signature_help: false,
        item_type: Some(
            Int {
                _priv: (),
            },
        ),
    },
    CompletionItem {
        label: "i",
        insert_text_snippet: None,
        detail: "",
        documentation: None,
        kind: Variable,
        sort_text: None,
        trigger_signature_help: false,
        item_type: None,
    },
    CompletionItem {
        label: "true",
        insert_text_snippet: None,
        detail: "",
        documentation: None,
        kind: Keyword,
        sort_text: None,
        trigger_signature_help: false,
        item_type: Some(
            Bit {
                _priv: (),
            },
        ),
    },
]
