crates/ide/src/handlers/snapshots/ide__handlers__completion__tests__variables-3.snap
---
source: crates/ide/src/handlers/completion.rs
expression: "check(\"defvar outer = 1; foreach i = 0...2 in { defvar inner = outer$ }\")"
---
[
    CompletionItem {
        label: "false",
        insert_text_snippet: None,
        detail: "",
        documentation: None,
        kind: Keyword,
        sort_text: None,
        trigger_signature_help: false,
        item_type: Some(
            Bit {
                _priv: (),
            },
        ),
    },
    CompletionItem {
        label: "i",
        insert_text_snippet: None,
        detail: "",
        documentation: None,
        kind: Variable,
        sort_text: None,
        trigger_signature_help: false,
        item_type: None,
    },
    CompletionItem {
        label: "outer",
        insert_text_snippet: None,
        detail: "",
        documentation: None,
        kind: Variable,
        sort_text: None,
        trigger_signature_help: false,
        item_type: None,
    },
    CompletionItem {
        label: "true",
        insert_text_snippet: None,
        detail: "",
        documentation: None,
        kind: Keyword,
        sort_text: None,
        trigger_signature_help: false,
        item_type: Some(
            Bit {
                _priv: (),
            },
        ),
    },
]
