crates/ide/src/handlers/snapshots/ide__handlers__completion__tests__variables.snap
---
source: crates/ide/src/handlers/completion.rs
expression: "check(\"defvar x = 10; defvar y = x$\")"
---
[
    CompletionItem {
        label: "false",
        insert_text_snippet: None,
        detail: "",
        documentation: None,
        kind: Keyword,
        sort_text: None,
        trigger_signature_help: false,
        item_type: Some(
            Bit {
                _priv: (),
            },
        ),
    },
    CompletionItem {
        label: "true",
        insert_text_snippet: None,
        detail: "",
        documentation: None,
        kind: Keyword,
        sort_text: None,
        trigger_signature_help: false,
        item_type: Some(
            Bit {
                _priv: (),
            },
        ),
    },
    CompletionItem {
        label: "x",
        insert_text_snippet: None,
        detail: "",
        documentation: None,
        kind: Variable,
        sort_text: None,
        trigger_signature_help: false,
        item_type: None,
    },
]
